# api-etl-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/api_etl_pipeline/: __init__.py  cli.py  downloads.py  http_client.py  pipeline.py  rate_limiter.py  retry_policy.py  run_capture.py  settings.py
src/api_etl_pipeline/connectors/: base.py  nrc_adams_aps.py  sec_edgar.py
src/api_etl_pipeline/storage/: blob_store.py  db.py
tests/: test_capture_hardening.py  test_offline_e2e.py
tests/fixtures/nrc_adams_aps/: search.json
tests/fixtures/sec_edgar/: artifact.htm  submissions.json
